<resources>
    <string name="app_name">5e Character Handbook</string>
    <string name="loading_quote">Preparing spells for the day… precisely as long as I mean to.</string>
    <string name="about">About Application</string>
    <string name="about_description">5e Tabletop application \n Created by Tin</string>
    <string name="characters">Characters</string>
    <string name="exit">Exit</string>
    <string name="do_you_really_want_to_exit_an_app">Do you really want to exit an app?</string>
    <string name="cancel">Cancel</string>
    <string name="ability_scores">Ability Scores</string>
    <string name="saving_throws">Saving Throws</string>
    <string name="notes">Notes</string>
    <string name="armor_class">AC</string>
    <string name="initiative">Initiative</string>
    <string name="proficiency_bonus">Prof. Bonus</string>
    <string name="speed">Speed</string>
    <string name="str">STR</string>
    <string name="dex">DEX</string>
    <string name="con">CON</string>
    <string name="intl">INT</string>
    <string name="wis">WIS</string>
    <string name="cha">CHA</string>
    <string name="actions">Actions</string>
    <string name="spells">Spells</string>
    <string name="character_sheet">Character</string>
    <string name="skills">Skills</string>
    <string name="conditions">Conditions</string>


    <string name="new_character">New Character</string>
    <string name="edit_character">Edit Character</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="name_required">Name is required</string>

    <string name="hint_name">Name</string>
    <string name="hint_race">Race</string>
    <string name="hint_class">Class</string>
    <string name="hint_subclass">Subclass</string>
    <string name="hint_level">Level</string>
    <string name="hint_max_hp">Max HP</string>
    <string name="hint_current_hp">Current HP</string>
    <string name="hint_speed">Speed</string>

    <string name="hint_armor_class">Notes</string>
    <string name="hint_strength">Notes</string>
    <string name="hint_dexterity">Notes</string>
    <string name="hint_constitution">Notes</string>
    <string name="hint_intelligence">Notes</string>
    <string name="hint_wisdom">Notes</string>
    <string name="hint_charisma">Notes</string>

    <string name="home">Home</string>
    <string name="bestiary">Bestiary</string>
    <string name="items">Items</string>
    <string name="coming_soon">Coming soon</string>


    <string name="race">Race</string>
    <string name="char_class">Class</string>
    <string name="char_subclass">Subclass</string>
    <string name="abilities">Abilities</string>

    <string name="no_internet">No internet connection</string>

    <string name="finish">Finish</string>

    <string name="enter_name">Enter a name</string>
    <string name="create">Create</string>
    <string name="pick_race_class">Pick a race and class first</string>
    <string name="character_created">Character created!</string>


    <string name="settings">Settings</string>
    <string name="theme">Theme</string>
    <string name="theme_summary">Light / Dark / System</string>
    <string name="language">Language</string>
    <string name="language_summary">App language</string>
    <string name="theme_system">System</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>








</resources>