<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragments"
    app:startDestination="@id/menuHome">



    <fragment
        android:id="@+id/menuHome"
        android:name="hr.algebra.dnd5e.fragment.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"
        />

    <fragment
        android:id="@+id/menuCharacters"
        android:name="hr.algebra.dnd5e.fragment.CharactersFragment"
        android:label="@string/characters"
        tools:layout="@layout/fragment_characters" />

    <fragment
        android:id="@+id/menuAbout"
        android:name="hr.algebra.dnd5e.fragment.AboutFragment"
        android:label="@string/about"
        tools:layout="@layout/fragment_about"/>


    <fragment
        android:id="@+id/menuSettings"
        android:name="hr.algebra.dnd5e.fragment.SettingsFragment"
        android:label="@string/settings"
        />




</navigation>