<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    tools:context=".fragment.FinishFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/_16dp">

        <TextView
            style="@style/SectionHeader"
            android:text="@string/finish"
            android:textSize="@dimen/_30dp" />
        <View style="@style/SectionDivider"/>


        <EditText
            android:id="@+id/etName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:hint="@string/enter_name"
            android:textColor="@color/white"
            android:textColorHint="@color/white"
            android:inputType="textCapWords"
            android:maxLines="1" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCreate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20dp"
            android:text="@string/create"/>

    </LinearLayout>
</FrameLayout>
